# QIm

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Overview.md  mkdocs.yml  readme.md
.github/workflows/: page.yml
ai/: AI_Agent_Task_Template.md  IMPLEMENTATION_PLAN.md
benchmark/: CMakeLists.txt
benchmark/performance/: CMakeLists.txt  PerformanceTestController.cpp  PerformanceTestController.h  PerformanceTestReportDialog.cpp  PerformanceTestReportDialog.h  PerformanceTestReportDialog.ui  PerformanceTestWidget.cpp  PerformanceTestWidget.h  PerformanceTestWidget.ui  PerformanceTestWindow.cpp  PerformanceTestWindow.h  main.cpp
cmake/: QImConfig.cmake.in  QImPlotConfig.cmake.in
docs/: doc-writing-guide.md  index.html
docs/doxygen-doc-file/: Doxyfile-qch-cn  Doxyfile-wiki-cn  Doxyfile-wiki-en
docs/en/: api-reference.md  custom-node.md  data-series.md  downsampling.md  figure-widget.md  index.md  object-tree.md  performance.md  pimpl-pattern.md  property-system.md  render-mode.md  render-node.md  signal-slot.md
docs/en/dev/: coding-standards.md  custom-node.md  flag-mapping.md  index.md  new-node-guide.md  pimpl-dev-guide.md  qt-integration.md  render-guidelines.md
docs/en/plot2d/: index.md  plot-line.md
docs/en/plot3d/: index.md
docs/zh/: api-reference.md  data-series.md  downsampling.md  figure-widget.md  font.md  object-tree.md  performance.md  pimpl-pattern.md  property-system.md  readme.md  render-mode.md  render-node.md  signal-slot.md
docs/zh/dev/: coding-standards.md  custom-node.md  flag-mapping.md  index.md  new-node-guide.md  (+3 more)
examples/: CMakeLists.txt  HowToAddNewFunction.md
examples/qimfigure-mixed-test/: CMakeLists.txt  main.cpp
examples/qimfigure-splitWidget/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
examples/qimfigure-test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/qimfigure-test/functions/: TestFunction.cpp  TestFunction.h  TestFunctionManager.cpp  TestFunctionManager.h
examples/qimfigure-test/functions/3d/: Plot3DLineFunction.cpp  Plot3DLineFunction.h  Plot3DScatterFunction.cpp  Plot3DScatterFunction.h
examples/qimfigure-test/functions/datapoints/: BarGroupsFunction.cpp  BarGroupsFunction.h  BarsFunction.cpp  BarsFunction.h  Histogram2DFunction.cpp  Histogram2DFunction.h  HistogramFunction.cpp  HistogramFunction.h  ScatterFunction.cpp  ScatterFunction.h  StairsFunction.cpp  StairsFunction.h
examples/qimfigure-test/functions/docs/: HowToAddNewFunction.md
examples/qimfigure-test/functions/error/: ErrorBarsFunction.cpp  ErrorBarsFunction.h
examples/qimfigure-test/functions/layout/: SubplotsFunction.cpp  SubplotsFunction.h
examples/qimfigure-test/functions/line/: Line10KFunction.cpp  Line10KFunction.h  Line1MFunction.cpp  Line1MFunction.h
examples/qimfigure-test/functions/other/: DigitalFunction.cpp  DigitalFunction.h  DummyFunction.cpp  DummyFunction.h  HeatmapFunction.cpp  HeatmapFunction.h  ImageFunction.cpp  ImageFunction.h  InfLinesFunction.cpp  InfLinesFunction.h  PieChartFunction.cpp  PieChartFunction.h  StemsFunction.cpp  StemsFunction.h  TextFunction.cpp  TextFunction.h
examples/qimfigure-test/functions/shaded/: ShadedFunction.cpp  ShadedFunction.h
examples/qimfigure-test/functions/tools/: AnnotationFunction.cpp  AnnotationFunction.h  DragLinesFunction.cpp  DragLinesFunction.h  DragPointFunction.cpp  DragPointFunction.h  DragRectFunction.cpp  DragRectFunction.h  TagsFunction.cpp  TagsFunction.h
examples/qimfigure-test/widgets/: ColorButton.cpp  ColorButton.h  FunctionTreeWidget.cpp  FunctionTreeWidget.h  PropertyPanelWidget.cpp  PropertyPanelWidget.h
examples/qimwidget-test/: CMakeLists.txt  ImTestWidget.cpp  ImTestWidget.h  MainWindow.cpp
examples/qt-with-implots/: CMakeLists.txt  ImWidget2D.cpp  ImWidget2D.h  ImWidget3D.cpp  ImWidget3D.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
examples/readme-2d-example/: CMakeLists.txt  main.cpp
examples/readme-3d-example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QImAPI.h
src/core/: CMakeLists.txt  QImAbstractNode.cpp  QImAbstractNode.h  QImCoreConfig.cmake.in  QImFontFileHelper.cpp  QImFontFileHelper.h  QImTrackedValue.hpp  QImWidgetNode.cpp  QImWidgetNode.h  QtImGuiUtils.cpp  QtImGuiUtils.h
src/core/plot/: QImLTTBDownsampler.cpp  QImLTTBDownsampler.h  QImMinMaxLTTBDownsampler.cpp  QImMinMaxLTTBDownsampler.h  QImPlot.cpp  QImPlot.h  QImPlot3DItemNode.cpp  QImPlot3DItemNode.h  QImPlot3DLineItemNode.cpp  QImPlot3DLineItemNode.h  QImPlot3DMeshItemNode.h  QImPlot3DNode.cpp  QImPlot3DNode.h  QImPlot3DScatterItemNode.cpp  QImPlot3DScatterItemNode.h  QImPlot3DSurfaceItemNode.cpp  QImPlot3DSurfaceItemNode.h  QImPlot3DTriangleItemNode.cpp  QImPlot3DTriangleItemNode.h  QImPlotAnnotationNode.cpp  QImPlotAnnotationNode.h  QImPlotAxisInfo.cpp  QImPlotAxisInfo.h  QImPlotBarGroupsDataSeries.cpp  QImPlotBarGroupsDataSeries.h  QImPlotBarGroupsItemNode.cpp  QImPlotBarGroupsItemNode.h  QImPlotBarsItemNode.cpp  QImPlotBarsItemNode.h  QImPlotDataSeries.h  QImPlotDigitalItemNode.cpp  QImPlotDigitalItemNode.h  QImPlotDragLineXNode.cpp  QImPlotDragLineXNode.h  QImPlotDragLineYNode.cpp  QImPlotDragLineYNode.h  QImPlotDragPointNode.cpp  QImPlotDragPointNode.h  QImPlotDragRectNode.cpp  QImPlotDragRectNode.h  (+52 more)
src/core/plot3d/: QImPlot3D.cpp  QImPlot3D.h  QImPlot3DAxisInfo.cpp  QImPlot3DAxisInfo.h  QImPlot3DDataSeries.h  QImPlot3DExtItemNode.cpp  QImPlot3DExtItemNode.h  QImPlot3DExtLineItemNode.cpp  QImPlot3DExtLineItemNode.h  QImPlot3DExtNode.cpp  QImPlot3DExtNode.h  QImPlot3DExtScatterItemNode.cpp  QImPlot3DExtScatterItemNode.h  QImPlot3DItemNode.cpp  QImPlot3DItemNode.h  QImPlot3DLineItemNode.cpp  QImPlot3DLineItemNode.h  QImPlot3DMeshItemNode.cpp  QImPlot3DMeshItemNode.h  QImPlot3DNode.cpp  QImPlot3DNode.h  QImPlot3DScatterItemNode.cpp  QImPlot3DScatterItemNode.h  QImPlot3DSurfaceItemNode.h  QImPlot3DTriangleItemNode.h
src/widgets/: CMakeLists.txt  QImFigure3DWidget.cpp  QImFigure3DWidget.h  QImFigureWidget.cpp  QImFigureWidget.h  QImPlotTheme.cpp  QImPlotTheme.h  QImWidget.cpp  QImWidget.h  QImWidgetsConfig.cmake.in
(+3 files in other folders)
