cmake_minimum_required(VERSION 3.16)
set(EXAMPLE_PROJECT_NAME QImFigureTest)
project(${EXAMPLE_PROJECT_NAME} VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS
    Core
    Gui
    Widgets
    OpenGL
)
if(QT_VERSION_MAJOR EQUAL 6)
    # qt6 拆分为OpenGLWidgets
    find_package(Qt6 COMPONENTS OpenGLWidgets REQUIRED)
endif()

file(GLOB HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/*.h")
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
file(GLOB UI_FILES "${CMAKE_CURRENT_LIST_DIR}/*.ui")
file(GLOB RESOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.qrc")
# Include widgets subdirectory files
file(GLOB WIDGETS_HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/widgets/*.h")
file(GLOB WIDGETS_SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/widgets/*.cpp")
# Include functions subdirectory files
file(GLOB FUNCTION_HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/functions/*.h")
file(GLOB FUNCTION_SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/functions/*.cpp")
file(GLOB FUNCTION_LINE_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/line/*.h")
file(GLOB FUNCTION_LINE_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/line/*.cpp")
file(GLOB FUNCTION_DATAPOINTS_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/datapoints/*.h")
file(GLOB FUNCTION_DATAPOINTS_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/datapoints/*.cpp")
file(GLOB FUNCTION_SHADED_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/shaded/*.h")
file(GLOB FUNCTION_SHADED_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/shaded/*.cpp")
file(GLOB FUNCTION_ERROR_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/error/*.h")
file(GLOB FUNCTION_ERROR_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/error/*.cpp")
file(GLOB FUNCTION_OTHER_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/other/*.h")
file(GLOB FUNCTION_OTHER_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/other/*.cpp")
file(GLOB FUNCTION_LAYOUT_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/layout/*.h")
file(GLOB FUNCTION_LAYOUT_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/layout/*.cpp")
file(GLOB FUNCTION_TOOLS_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/tools/*.h")
file(GLOB FUNCTION_TOOLS_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/tools/*.cpp")
file(GLOB FUNCTION_3D_HEADERS "${CMAKE_CURRENT_LIST_DIR}/functions/3d/*.h")
file(GLOB FUNCTION_3D_SOURCES "${CMAKE_CURRENT_LIST_DIR}/functions/3d/*.cpp")
set(PROJECT_SOURCES "")
# 将各个文件列表追加到 PROJECT_SOURCES
list(APPEND PROJECT_SOURCES ${HEADER_FILES})
list(APPEND PROJECT_SOURCES ${SOURCE_FILES})
list(APPEND PROJECT_SOURCES ${UI_FILES})
list(APPEND PROJECT_SOURCES ${RESOURCE_FILES})
list(APPEND PROJECT_SOURCES ${WIDGETS_HEADER_FILES})
list(APPEND PROJECT_SOURCES ${WIDGETS_SOURCE_FILES})
list(APPEND PROJECT_SOURCES ${FUNCTION_HEADER_FILES})
list(APPEND PROJECT_SOURCES ${FUNCTION_SOURCE_FILES})
list(APPEND PROJECT_SOURCES ${FUNCTION_LINE_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_LINE_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_DATAPOINTS_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_DATAPOINTS_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_SHADED_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_SHADED_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_ERROR_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_ERROR_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_OTHER_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_OTHER_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_LAYOUT_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_LAYOUT_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_TOOLS_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_TOOLS_SOURCES})
list(APPEND PROJECT_SOURCES ${FUNCTION_3D_HEADERS})
list(APPEND PROJECT_SOURCES ${FUNCTION_3D_SOURCES})
if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(${EXAMPLE_PROJECT_NAME}
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET QImWidgetTest APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(${EXAMPLE_PROJECT_NAME} SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(${EXAMPLE_PROJECT_NAME}
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(${EXAMPLE_PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Gui
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::OpenGL
    QIm::Core
    QIm::Widgets
)
if(QT_VERSION_MAJOR EQUAL 6)
    target_link_libraries(${EXAMPLE_PROJECT_NAME} PRIVATE
        Qt6::OpenGLWidgets
    )
endif()

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.${EXAMPLE_PROJECT_NAME})
endif()
set_target_properties(${EXAMPLE_PROJECT_NAME} PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS ${EXAMPLE_PROJECT_NAME}
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(${EXAMPLE_PROJECT_NAME})
endif()
